добавлены контроллеры и вью для поставщиков и поставок

--- a/StoreHouse/WebApp/Views/Storehouse/Index.cshtml
+++ b/StoreHouse/WebApp/Views/Storehouse/Index.cshtml
@@ -1,17 +1,14 @@
 ﻿@model IEnumerable<WebApp.Services.StorehouseViewModel>
 
 @{
-    ViewData["Title"] = "Storehouses List";
+    ViewData["Title"] = "Suppliers";
 }
 
-<h1>Available storehouses</h1>
+<h1>Storehouses view</h1>
 
 <table class="table">
     <thead>
         <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Id)
-            </th>
             <th>
                 @Html.DisplayNameFor(model => model.Address)
             </th>
@@ -22,14 +19,20 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Id)
-            </td>
-            <td>
                 @Html.DisplayFor(modelItem => item.Address)
             </td>
             <td>
-                @Html.ActionLink("Add Supply", "Create", "Supply", new { id = item.Id })
-                @Html.ActionLink("View Products", "Index", "Product", new { id = item.Id })
+                @if (ViewBag.SupplierId != null)
+                {
+                    @Html.ActionLink("Add Supply", "Create", "Supply", new { 
+                        supplyId = ViewBag.SupplierId, storehouseId = item.Id 
+                    })
+                }
+                else
+                {
+                    @Html.ActionLink("Add Supply", "SelectSupplier", "Supplier", new { storehouseId = item.Id })
+                    @Html.ActionLink("View Products", "Index", "Product", new { storehouseId = item.Id })
+                }
             </td>
         </tr>
 }
