--- a/StoreHouse/WebApp/Views/Shared/_Layout.cshtml
+++ b/StoreHouse/WebApp/Views/Shared/_Layout.cshtml
@@ -25,6 +25,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Storehouse" asp-action="Index">Storehouse</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Supplier" asp-action="Index">Supplier</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Supply" asp-action="Index">Supply</a>
+                        </li>
                     </ul>
                 </div>
             </div>
