--- a/StoreHouse/WebApp/Views/Supply/Index.cshtml
+++ b/StoreHouse/WebApp/Views/Supply/Index.cshtml
@@ -1,11 +1,14 @@
-﻿@model IEnumerable<WebApp.Models.Entities.Supply>
+﻿@model IEnumerable<WebApp.Services.SupplyViewModel>
 
 @{
-    ViewData["Title"] = "Supplies";
+    ViewData["Title"] = "Index";
 }
 
-<h1>Supplies view</h1>
+<h1>Index</h1>
 
+<p>
+    <a asp-action="Create">Create supply</a>
+</p>
 <table class="table">
     <thead>
         <tr>
@@ -13,16 +16,13 @@
                 @Html.DisplayNameFor(model => model.Id)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.StorehouseId)
+                @Html.DisplayNameFor(model => model.StorehouseAddress)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.SupplierId)
+                @Html.DisplayNameFor(model => model.SupplierName)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.DateTime)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.TotalPrice)
             </th>
             <th></th>
         </tr>
@@ -34,19 +34,17 @@
                 @Html.DisplayFor(modelItem => item.Id)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.StorehouseId)
+                @Html.DisplayFor(modelItem => item.StorehouseAddress)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.SupplierId)
+                @Html.DisplayFor(modelItem => item.SupplierName)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.DateTime)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.TotalPrice)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id=item.Id })
+                    @Html.ActionLink("Edit", "Edit", new { supplyId = item.Id }) |
+                    @Html.ActionLink("Delete", "Delete", new { supplyId = item.Id })
             </td>
         </tr>
 }
