--- a/StoreHouse/WebApp/Views/Storehouse/Index.cshtml
+++ b/StoreHouse/WebApp/Views/Storehouse/Index.cshtml
@@ -32,7 +32,8 @@
                 else
                 {
                     @Html.ActionLink("Add Supply", "SelectSupplier", "Supplier", new { storehouseId = item.Id })
-                    @Html.ActionLink("View Products", "Index", "Product", new { storehouseId = item.Id })
+                    //@(" | ")
+                    //@Html.ActionLink("View Products", "Index", "Product", new { storehouseId = item.Id })
                 }
             </td>
         </tr>
