--- a/StoreHouse/WebApp/Views/ProductInSupply/Index.cshtml
+++ b/StoreHouse/WebApp/Views/ProductInSupply/Index.cshtml
@@ -11,7 +11,6 @@
 </p>
 
 <div>
-    <h4>SupplyViewModel</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
@@ -31,6 +30,12 @@
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Supply.DateTime)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Supply.TotalPrice)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Supply.TotalPrice)
         </dd>
     </dl>
 </div>
